2004-03-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b5

	* Change:  Merging donw's optional pnmcomp/composite fix for
	  watermarking

2004-03-31 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b4

	* Change: Trivial add of Mambo to list of Environments in Config Wizard.

2004-03-30 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b3

	* Change: Little Changes for phpBB2. No major changes.

2004-03-30 Jens Tkotz <jens@peino.de> 1.4.3-RC2-cvs-b2

	* Bugfix: Added missing quotes around a defined check.

2004-03-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b1

	* Change:  Re-add missing <?php to setup/backup_albums.php

2004-03-28  Chris Kelly  <ckdake@users.sf.net> 1.4.3-RC1

	* v1.4.3 Release Candidate 1

2004-03-28  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.3-RC1-cvs-b2

	* Parse error typo fix in util.php from 1.4.3-cvs-b150

	* Fix in tools/build_manifest.php for broken GALLERY_BASEDIR change

2004-03-28  Chris Kelly  <ckdake@users.sf.net> 1.4.3-RC1-cvs-b1

	* Initial 1.4.3 branch

2004-03-28 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b150

	* Bugfix: Closed an unclosed Table Tag.
		  (Caught by Jade)

2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b149

	* Bugfix: Fixed a place where $GALLERY_BASEDIR was used, but undefined.
	  	  (Caught by Christian Mohn)

2004-03-27 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b148

	* Change: Added  possbility to watermark subalbums

	* Change: removed some warnings.

2004-03-25  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.3-cvs-b147

	* Added config files that allow the applet behavior to be configured
	  by specifying defaults or overrides for all the Gallery Remote
	  properties.

2004-03-24  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b146

	* Added missing ?> tag at end of some image frame definitions.

2004-03-23 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b145

	* Change:  Check watermarks directory for images add error if none exist.