@@ -310,7 +310,7 @@ A:hover	{ color: #E91414; }
 	  line-height:140%;
 	  padding:2px;
 	  border:0px dashed #000000;
-	  width=100%;
+	  width:100%;
 	  background-color: #000000;
 	}
 .modfooter a,
