@@ -1,3 +1,7 @@
+2004-04-01  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b6
+
+	* Change:  Replace = with : in embedded_style.css for *all* skins
+
 2004-03-31  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC2-cvs-b5
 
 	* Change:  Merging donw's optional pnmcomp/composite fix for
